expected/main/gens/primStructSelectA-neg-32.err
ERROR: "actual/main/gens/primStructSelectA-neg-32.lc", line 9
external selectP2 {primStructSelect Word "p" SW} :: Ref S -> ProxyLab "p" -> Ref SW
         ^
No generated implementation: Argument 1 (Bit 32) does not have expected kind (area)

ERROR: Aborting after previously reported error

